# multi_drone_payload_lifting

./: .gitignore  CLAUDE.md  README.md
ros2_ws/src/: apriltag_odom.py  crane_control.py  drone_listener.py  eval_harness.py  eval_harness.rviz  flow_hover_test.py  flow_tags.launch.py  joystick_ref_publisher.py  launch_formation.sh  offboard_control.py  tags_36h11.yaml  test_ref_publisher.py
simulation/: CMakeLists.txt
simulation/models/apriltag_tags/: model.config  model.sdf
simulation/models/granite_ground/: model.config  model.sdf
simulation/src/: cable.cpp
simulation/worlds/: CMakeCache.txt  Makefile  cable_world.sdf  cmake_install.cmake  flow_world.sdf
